@@ -37,7 +37,7 @@ libmpf_la_SOURCES = \
   set_q.c iset.c iset_ui.c iset_si.c iset_str.c iset_d.c clear.c clears.c \
   get_str.c dump.c size.c eq.c reldiff.c sqrt.c random2.c inp_str.c out_str.c \
   add.c add_ui.c sub.c sub_ui.c ui_sub.c mul.c mul_ui.c div.c div_ui.c \
-  cmp.c cmp_d.c cmp_si.c cmp_ui.c mul_2exp.c div_2exp.c abs.c neg.c get_d.c \
+  cmp.c cmp_d.c cmp_z.c cmp_si.c cmp_ui.c mul_2exp.c div_2exp.c abs.c neg.c get_d.c \
   get_d_2exp.c set_dfl_prec.c set_prc.c set_prc_raw.c get_dfl_prec.c get_prc.c \
   ui_div.c sqrt_ui.c \
   pow_ui.c urandomb.c swap.c get_si.c get_ui.c int_p.c \
