@@ -1,3 +1,11 @@
+2015-09-11 Marco Bodrato <bodrato@mail.dm.unipi.it>
+
+	* mpf/cmp_z.c: New file implementing mpf_cmp_z.
+	* mpf/Makefile.am (libmpf_la_SOURCES): Add it.
+	* Makefile.am (MPF_OBJECTS): Add generate object to libs.
+	* gmp-h.in: Declare new function.
+	* tests/mpf/t-cmp_si.c: Test also the new function.
+
 2015-09-06  Torbjörn Granlund  <torbjorng@google.com>
 
 	* Wrap remaining limb allocations in __GMP_ALLOCATE_FUNC_LIMBS.
